--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>shenwuweb.ico">
   <title>
   </title>
-  <!-- <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"> -->
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   <!-- <script src="https://unpkg.com/element-ui/lib/index.js"></script> -->
   <!-- 22510f4698342823ce8872731304e286 -->
   <script
