--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
   <script src="/lib/ueditor/ueditor.all.min.js"></script> -->
   <!-- 引入首页地图弹出框样式 -->
   <link rel="stylesheet" href="./show-map.css" type="text/css">
+  <!-- 新加的!!! -->
+  <link href="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.css" rel="stylesheet">
+  <script src="https://cdn.bootcss.com/nprogress/0.2.0/nprogress.js"></script>
 </head>
 
 <body>
